# glq

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  compare_methods.py  eval_ppl.py  golay-leech-quant-prototype-v2.py  pyproject.toml  test_glq_e2e.py
benchmarks/: _ab_diff.py  _build_check.py  _e8p_blockdiag_sqnr.py  _e8p_e2e_eval.py  _e8p_moe_grouped_parity.py  _e8p_nstage_serve.py  _e8p_nstage_validate.py  _moe_parity.py  _prof_viterbi.py  _prof_viterbi_graphed.py  _profile_moe.sh  _qtip_e2e.py  _qtip_layer_proxy.py  _qtip_ldlq.py  _qtip_mse.py  _qtip_s0_gate.sh  _qtip_s1_bench.py  _qtip_study.md  _qtip_trellis.py  _run_203_cudagraph.sh  _run_203_parity.sh  _run_31b_regression.sh  _run_e4b_regression.sh  _run_l4_ship_validate.sh  _test_moe_grouped_matmul.py  _test_moe_grouping.py  _trellis_cudagraph_bench.py  _trellis_vllm_bench.py  bench_attention_v3.py  bench_batch_throughput.py  bench_e4b_kv_inline_dequant.py  bench_e4b_longctx.py  bench_gpu.py  bench_inference.py  bench_kernel_variants.py  bench_packed.py  bench_quality_lm_eval.py  bench_splitk.py  bench_tps_vllm.py  bench_varlen_mixed.py  (+17 more)
examples/: README.md  inference_hf.py  inference_vllm.py  quantize_mixed_precision.md  quantize_model.py
glq/: __init__.py  codebook.py  codebook_e8p.py  codebook_kernel.py  codebook_relaxed.py  cuda_graph.py  e8_codebook.pt  fused_experts.py  hadamard.py  hf_integration.py  inference_kernel.py  kv_cache.py  kv_e8.py  kv_sensitivity.py  ldlq.py  model_card.py  quantize_kv.py  quantize_model.py  quantized_linear.py  rht.py  sensitivity.py  state_dict_stacker.py  trellis.py
glq_vllm/: __init__.py  _cudagraph_cap.py  _dispatch.py  config.py  custom_ops.py  dequant.py  e8_kv_spec.py  e8_paged_cache.py  embedding_method.py  fused_moe_method.py  kv_compression.py  linear_method.py  triton_unified_attention_e8.py
infra/: awsc.sh  main.tf  outputs.tf  run.sh  setup.sh.tftpl  variables.tf
scripts/: batch_quantization.py  evaluate_nemotron_ppl.py  (+2 more)
(+88 files in other folders)
