[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "glq"
version = "0.2.10"
description = "E8 lattice codebook quantization for LLM weights"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = ["torch>=2.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
cuda = ["triton"]
dev = ["pytest"]
quantize = ["transformers", "datasets", "safetensors", "accelerate", "sentencepiece"]

[project.scripts]
glq-quantize = "glq.quantize_model:main"

[project.entry-points."vllm.general_plugins"]
glq = "glq_vllm:register"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that download models / take >30s (deselect with '-m \"not slow\"')",
]

[tool.setuptools.packages.find]
include = ["glq*", "glq_vllm*"]

[tool.setuptools.package-data]
glq = ["*.pt"]
